<resources>
    <string name="app_name">HokmGame</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="game_title">HOKM</string>
    <string name="player4">player 4</string>
    <string name="player4T">player 4 </string>
    <string name="player2">player 2</string>
    <string name="player2T">player 2 </string>
    <string name="player3">player 3</string>
    <string name="player3T">player 3 </string>
    <string name="their_points">Their Points: </string>
    <string name="our_points">"Our Points: "</string>
    <string name="trump_hearts">Trump: Hearts</string>
    <string name="trump_diamonds">Trump: Diamonds</string>
    <string name="trump_clubs">Trump: Clubs</string>
    <string name="trump_spades">Trump: Spades</string>
    <string name="broken">Broken</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>